added more projects

--- a/index.html
+++ b/index.html
@@ -34,26 +34,35 @@
       <div class="my-12 px-4">
         <div class="bg-black/80 rounded-2xl shadow-lg p-6 max-w-6xl mx-auto">
           <!-- Socials at the top -->
+          <br />
           <div class="flex flex-wrap justify-center gap-4 mb-8">
             <a
               href="https://github.com/DanielSon721"
               target="_blank"
               rel="noopener noreferrer"
+              class="hover:scale-105 transition-transform"
             >
               <img
-                src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white"
+                src="https://img.shields.io/badge/GitHub-333333?style=for-the-badge&logo=github&logoColor=white"
+                alt="GitHub Badge"
               />
             </a>
+
             <a
               href="https://linkedin.com/in/daniel-son-720950260/"
               target="_blank"
               rel="noopener noreferrer"
+              class="hover:scale-105 transition-transform"
             >
               <img
                 src="https://img.shields.io/badge/LinkedIn-0A66C2?style=for-the-badge&logo=linkedin&logoColor=white"
               />
             </a>
-            <a href="#" onclick="copyEmail(event)">
+            <a
+              href="#"
+              onclick="copyEmail(event)"
+              class="hover:scale-105 transition-transform"
+            >
               <img
                 src="https://img.shields.io/badge/Email-D14836?style=for-the-badge&logo=gmail&logoColor=white"
                 alt="Email"
@@ -100,7 +109,7 @@
                 </div>
 
                 <div>
-                  <h3 class="text-xl font-semibold mb-2">OS</h3>
+                  <h3 class="text-xl font-semibold mb-2">Operating Systems</h3>
                   <div class="flex flex-wrap gap-2">
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >macOS</span
@@ -151,7 +160,7 @@
                       >gdb</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >UTop</span
+                      >Dune</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >pandas</span
@@ -234,8 +243,8 @@
                       Why I Love Cybersecurity
                     </h3>
                     <p class="text-gray-400 mb-3">An essay<br /><br /></p>
-                    <span class="text-xs bg-blue-600 px-2 py-1 rounded"
-                      >Writing</span
+                    <span class="text-xs bg-blue-400 px-2 py-1 rounded"
+                      >English</span
                     >
                   </a>
                 </div>
@@ -252,10 +261,13 @@
                   >
                     <h3 class="text-xl font-bold mb-2">OCaml Interpreter</h3>
                     <p class="text-gray-400 mb-3">
-                      Mock computer language interpreter
+                      Simple computer language interpreter
                     </p>
-                    <span class="text-xs bg-yellow-600 px-2 py-1 rounded"
+                    <span class="text-xs bg-yellow-900 px-2 py-1 rounded"
                       >OCaml</span
+                    >
+                    <span class="text-xs bg-yellow-900 px-2 py-1 rounded"
+                      >Dune</span
                     >
                   </a>
                 </div>
@@ -274,9 +286,7 @@
                     <p class="text-gray-400 mb-3">
                       Custom implementation of a Unix shell
                     </p>
-                    <span class="text-xs bg-purple-600 px-2 py-1 rounded"
-                      >C</span
-                    >
+                    <span class="text-xs bg-pink-500 px-2 py-1 rounded">C</span>
                   </a>
                 </div>
 
@@ -314,8 +324,14 @@
                     <p class="text-gray-400 mb-3">
                       Messaging system for fraternity financial communications
                     </p>
-                    <span class="text-xs bg-green-600 px-2 py-1 rounded"
+                    <span class="text-xs bg-green-700 px-2 py-1 rounded"
                       >Python</span
+                    >
+                    <span class="text-xs bg-green-700 px-2 py-1 rounded"
+                      >Google Sheets API</span
+                    >
+                    <span class="text-xs bg-green-700 px-2 py-1 rounded"
+                      >Pandas</span
                     >
                   </a>
                 </div>
@@ -336,6 +352,63 @@
                     </p>
                     <span class="text-xs bg-indigo-600 px-2 py-1 rounded"
                       >Python</span
+                    >
+                    <span class="text-xs bg-indigo-600 px-2 py-1 rounded"
+                      >Nmap</span
+                    >
+                    <span class="text-xs bg-indigo-600 px-2 py-1 rounded"
+                      >Metasploit</span
+                    >
+                  </a>
+                </div>
+
+                <!-- Project 7 -->
+                <div
+                  class="bg-gray-900/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                >
+                  <a
+                    href="https://github.com/DanielSon721/RLCS-Predictor"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="block"
+                  >
+                    <h3 class="text-xl font-bold mb-2">RLCS Predictor</h3>
+                    <p class="text-gray-400 mb-3">
+                      RLCS Esports match predictor
+                    </p>
+                    <span class="text-xs bg-orange-500 px-2 py-1 rounded"
+                      >Jupyter Notebook</span
+                    >
+                    <span class="text-xs bg-orange-500 px-2 py-1 rounded"
+                      >Pandas</span
+                    >
+                    <span class="text-xs bg-orange-500 px-2 py-1 rounded"
+                      >scikit-learn</span
+                    >
+                  </a>
+                </div>
+
+                <!-- Project 8 -->
+                <div
+                  class="bg-gray-900/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                >
+                  <a
+                    href="https://github.com/DanielSon721/RLCS-Predictor"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="block"
+                  >
+                    <h3 class="text-xl font-bold mb-2">
+                      Payroll Management System
+                    </h3>
+                    <p class="text-gray-400 mb-3">
+                      University TA payroll management
+                    </p>
+                    <span class="text-xs bg-yellow-500 px-2 py-1 rounded"
+                      >Java</span
+                    >
+                    <span class="text-xs bg-yellow-500 px-2 py-1 rounded"
+                      >JUnit</span
                     >
                   </a>
                 </div>
@@ -555,7 +628,6 @@
               </a>
             </div>
           </div>
-          <br />
           <br />
           <br />
         </div>
