--- a/index.html
+++ b/index.html
@@ -385,15 +385,15 @@
                   >
                     <h3 class="text-xl font-bold mb-2">RLCS Predictor</h3>
                     <p class="text-gray-400 mb-3">
-                      RLCS Esports match predictor
+                      RLCS Esports match outcome predictor
                     </p>
-                    <span class="text-xs bg-orange-600 px-2 py-1 rounded"
+                    <span class="text-xs bg-pink-800 px-2 py-1 rounded"
                       >Jupyter Notebook</span
                     >
-                    <span class="text-xs bg-orange-600 px-2 py-1 rounded"
+                    <span class="text-xs bg-pink-800 px-2 py-1 rounded"
                       >Pandas</span
                     >
-                    <span class="text-xs bg-orange-600 px-2 py-1 rounded"
+                    <span class="text-xs bg-pink-800 px-2 py-1 rounded"
                       >scikit-learn</span
                     >
                   </a>
@@ -413,12 +413,12 @@
                       Payroll Management System
                     </h3>
                     <p class="text-gray-400 mb-3">
-                      University TA payroll management
+                      University TA payroll management system
                     </p>
-                    <span class="text-xs bg-pink-800 px-2 py-1 rounded"
+                    <span class="text-xs bg-orange-500 px-2 py-1 rounded"
                       >Java</span
                     >
-                    <span class="text-xs bg-pink-800 px-2 py-1 rounded"
+                    <span class="text-xs bg-orange-500 px-2 py-1 rounded"
                       >JUnit</span
                     >
                   </a>
