added menu + about me + writing samples

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
+    <header id="scroll-header" class="matrix-header">
+      <div class="matrix-scanline"></div>
+      <nav class="matrix-nav">
+        <a href="aboutme.html" class="matrix-link">About Me</a>
+        <a href="writing.html" class="matrix-link">Writing Samples</a>
+      </nav>
+      <a href="index.html" class="matrix-glow">Daniel Son</a>
+    </header>
+
     <canvas id="canvas"></canvas>
 
     <div class="content-wrapper">
@@ -24,7 +33,7 @@
             Cybersecurity+Enthusiast;
             Software+Engineer;
             Computer+Science+and+Mathematics;
-            ΣΦΔ;"
+            ΣΦΔ"
             alt="Typing Animation"
           />
         </div>
@@ -242,7 +251,7 @@
               <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <!-- Project 1 -->
                 <div
-                  class="bg-gray-900/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <a
                     href="https://github.com/DanielSon721/Why-I-Love-Cybersecurity"
@@ -262,7 +271,7 @@
 
                 <!-- Project 2 -->
                 <div
-                  class="bg-gray-900/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <a
                     href="https://github.com/DanielSon721/Texas-Hold-em-Poker"
@@ -282,7 +291,7 @@
 
                 <!-- Project 3 -->
                 <div
-                  class="bg-gray-900/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <a
                     href="https://github.com/DanielSon721/Unix-Shell"
@@ -300,7 +309,7 @@
 
                 <!-- Project 4 -->
                 <div
-                  class="bg-gray-900/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <a
                     href="https://github.com/DanielSon721/OCaml-Interpreter"
@@ -323,7 +332,7 @@
 
                 <!-- Project 5 -->
                 <div
-                  class="bg-gray-900/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <a
                     href="https://github.com/DanielSon721/Auto-Messenger"
@@ -349,7 +358,7 @@
 
                 <!-- Project 6 -->
                 <div
-                  class="bg-gray-900/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <a
                     href="https://github.com/DanielSon721/Hacking-Tools"
@@ -375,7 +384,7 @@
 
                 <!-- Project 7 -->
                 <div
-                  class="bg-gray-900/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <a
                     href="https://github.com/DanielSon721/RLCS-Predictor"
@@ -401,7 +410,7 @@
 
                 <!-- Project 8 -->
                 <div
-                  class="bg-gray-900/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <a
                     href="https://github.com/DanielSon721/Payroll-Management-System"
@@ -444,7 +453,7 @@
               >
                 <!-- Computer Science Courses -->
                 <div
-                  class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Object-Oriented Programming</h4>
                   <p class="text-sm text-gray-400 mt-1">
@@ -452,7 +461,7 @@
                   </p>
                 </div>
                 <div
-                  class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Data Structures</h4>
                   <p class="text-sm text-gray-400 mt-1">
@@ -460,7 +469,7 @@
                   </p>
                 </div>
                 <div
-                  class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Algorithms</h4>
                   <p class="text-sm text-gray-400 mt-1">
@@ -468,7 +477,7 @@
                   </p>
                 </div>
                 <div
-                  class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Data Science</h4>
                   <p class="text-sm text-gray-400 mt-1">
@@ -476,7 +485,7 @@
                   </p>
                 </div>
                 <div
-                  class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">
                     Organization of Programming Languages
@@ -484,7 +493,7 @@
                   <p class="text-sm text-gray-400 mt-1">Syntax and semantics</p>
                 </div>
                 <div
-                  class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Networks</h4>
                   <p class="text-sm text-gray-400 mt-1">
@@ -492,7 +501,7 @@
                   </p>
                 </div>
                 <div
-                  class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Cryptography</h4>
                   <p class="text-sm text-gray-400 mt-1">
@@ -500,7 +509,7 @@
                   </p>
                 </div>
                 <div
-                  class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Computer Systems</h4>
                   <p class="text-sm text-gray-400 mt-1">
@@ -510,7 +519,7 @@
 
                 <!-- Mathematics Courses -->
                 <div
-                  class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Calculus I</h4>
                   <p class="text-sm text-gray-400 mt-1">
@@ -518,13 +527,13 @@
                   </p>
                 </div>
                 <div
-                  class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Calculus II</h4>
                   <p class="text-sm text-gray-400 mt-1">Integral calculus</p>
                 </div>
                 <div
-                  class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Calculus III</h4>
                   <p class="text-sm text-gray-400 mt-1">
@@ -532,7 +541,7 @@
                   </p>
                 </div>
                 <div
-                  class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Advanced Calculus</h4>
                   <p class="text-sm text-gray-400 mt-1">
@@ -540,7 +549,7 @@
                   </p>
                 </div>
                 <div
-                  class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Differential Equations</h4>
                   <p class="text-sm text-gray-400 mt-1">
@@ -548,7 +557,7 @@
                   </p>
                 </div>
                 <div
-                  class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Statistics</h4>
                   <p class="text-sm text-gray-400 mt-1">
@@ -556,7 +565,7 @@
                   </p>
                 </div>
                 <div
-                  class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Linear Algebra</h4>
                   <p class="text-sm text-gray-400 mt-1">
@@ -564,7 +573,7 @@
                   </p>
                 </div>
                 <div
-                  class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Advanced Linear Algebra</h4>
                   <p class="text-sm text-gray-400 mt-1">
@@ -572,7 +581,7 @@
                   </p>
                 </div>
                 <div
-                  class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Discrete Math</h4>
                   <p class="text-sm text-gray-400 mt-1">
@@ -580,13 +589,13 @@
                   </p>
                 </div>
                 <div
-                  class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Academic Writing</h4>
                   <p class="text-sm text-gray-400 mt-1">Rhetoric in writing</p>
                 </div>
                 <div
-                  class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Philosophy</h4>
                   <p class="text-sm text-gray-400 mt-1">
@@ -594,7 +603,7 @@
                   </p>
                 </div>
                 <div
-                  class="bg-gray-900/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
+                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <h4 class="font-semibold">Astronomy</h4>
                   <p class="text-sm text-gray-400 mt-1">
@@ -647,5 +656,6 @@
 
     <script type="module" src="matrix.js"></script>
     <script src="matrix.js"></script>
+    <script type="module" src="matrix.js"></script>
   </body>
 </html>
