added more writing samples + minor changes

--- a/aboutme.html
+++ b/aboutme.html
@@ -52,7 +52,7 @@
           <div class="flex flex-col lg:flex-row gap-8 mb-8">
             <!-- Toolkit on the left (narrower) -->
             <div class="lg:w-1/3 text-left">
-              <h2 class="text-3xl font-bold mb-6">About Me</h2>
+              <h2 class="text-3xl font-bold mb-6">--------</h2>
 
               <!-- Compact Skills Section -->
               <div class="space-y-4">
@@ -81,7 +81,7 @@
                       >Vacation : Aruba</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Emoji : 🥲 / 😢</span
+                      >Emoji : 😢</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Movie : Rogue One</span
@@ -116,11 +116,32 @@
             </div>
 
             <div class="lg:w-2/3">
-              <h2 class="text-3xl font-bold mb-6">
-                ---------------------------------------
-              </h2>
+              <h2 class="text-3xl font-bold mb-6">About Me</h2>
               Hi, I'm Daniel. I am a Korean-American from Massachusetts,
-              attending the University of Maryland.
+              attending the University of Maryland. I am a Computer Science and
+              Mathematics double major, entering my third undergraduate year.
+              <br /><br />
+              I have been coding for a long time, starting with basic block
+              coding on Scratch with my best friend in 5th grade. I took all of
+              the computer science courses offered at my high school, learning
+              foundational skills such as HTML, Python, Java, OOP design, and
+              more. I even earned a 5 on my AP Computer Science A exam!
+              <br /><br />
+              I decided to continue my pursuit of computer science at UMD with a
+              focus on cybersecurity.
+              <br /><br />
+              At UMD, I am part of the Sigma Phi Delta Engineering Fraternity,
+              where I serve as the treasurer of an executive board. Being
+              treasurer has taught me many invaluable skills such as teamwork,
+              communication, and leadership.
+              <br /><br />
+              I even developed a Python auto-messenger to automate the process
+              of communicating financial information, as I got quite sick of
+              copy and pasting messages to 70+ members!
+              <br /><br />
+              The University of Maryland and SigPhi are my happy places, and I
+              love all of my friends and acquaintances who make every day worth
+              it :D
             </div>
           </div>
 
