--- a/index.html
+++ b/index.html
@@ -303,7 +303,9 @@
                     <p class="text-gray-400 mb-3">
                       Custom implementation of a Unix shell
                     </p>
-                    <span class="text-xs bg-pink-500 px-2 py-1 rounded">C</span>
+                    <span class="text-xs bg-purple-600 px-2 py-1 rounded"
+                      >C</span
+                    >
                   </a>
                 </div>
 
@@ -396,13 +398,13 @@
                     <p class="text-gray-400 mb-3">
                       RLCS Esports match outcome predictor
                     </p>
-                    <span class="text-xs bg-pink-800 px-2 py-1 rounded"
+                    <span class="text-xs bg-pink-600 px-2 py-1 rounded"
                       >Jupyter Notebook</span
                     >
-                    <span class="text-xs bg-pink-800 px-2 py-1 rounded"
+                    <span class="text-xs bg-pink-600 px-2 py-1 rounded"
                       >Pandas</span
                     >
-                    <span class="text-xs bg-pink-800 px-2 py-1 rounded"
+                    <span class="text-xs bg-pink-600 px-2 py-1 rounded"
                       >scikit-learn</span
                     >
                   </a>
@@ -451,160 +453,137 @@
               <div
                 class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 mt-6"
               >
-                <!-- Computer Science Courses -->
-                <div
-                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
-                >
+                <!-- Each course tile -->
+                <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Object-Oriented Programming</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     OOP principles and design
                   </p>
                 </div>
-                <div
-                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
-                >
+
+                <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Data Structures</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Fundamental data organization
                   </p>
                 </div>
-                <div
-                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
-                >
+
+                <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Algorithms</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Problem-solving methods
                   </p>
                 </div>
-                <div
-                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
-                >
+
+                <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Data Science</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Data analysis techniques
                   </p>
                 </div>
-                <div
-                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
-                >
+
+                <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">
                     Organization of Programming Languages
                   </h4>
                   <p class="text-sm text-gray-400 mt-1">Syntax and semantics</p>
                 </div>
-                <div
-                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
-                >
+
+                <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Networks</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Computer networks and protocols
                   </p>
                 </div>
-                <div
-                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
-                >
+
+                <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Cryptography</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Encryption and security protocols
                   </p>
                 </div>
-                <div
-                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
-                >
+
+                <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Computer Systems</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Low-level system architecture
                   </p>
                 </div>
 
-                <!-- Mathematics Courses -->
-                <div
-                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
-                >
+                <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Calculus I</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Differential calculus
                   </p>
                 </div>
-                <div
-                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
-                >
+
+                <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Calculus II</h4>
                   <p class="text-sm text-gray-400 mt-1">Integral calculus</p>
                 </div>
-                <div
-                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
-                >
+
+                <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Calculus III</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Multivariable calculus
                   </p>
                 </div>
-                <div
-                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
-                >
+
+                <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Advanced Calculus</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Mathematical analysis
                   </p>
                 </div>
-                <div
-                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
-                >
+
+                <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Differential Equations</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Ordinary differential equations
                   </p>
                 </div>
-                <div
-                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
-                >
+
+                <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Statistics</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Probability, distributions, statistical inference
                   </p>
                 </div>
-                <div
-                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
-                >
+
+                <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Linear Algebra</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Vector spaces and matrices
                   </p>
                 </div>
-                <div
-                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
-                >
+
+                <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Advanced Linear Algebra</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Advanced matrix theory
                   </p>
                 </div>
-                <div
-                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
-                >
+
+                <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Discrete Math</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Logic, sets, relations, graphs
                   </p>
                 </div>
-                <div
-                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
-                >
+
+                <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Academic Writing</h4>
                   <p class="text-sm text-gray-400 mt-1">Rhetoric in writing</p>
                 </div>
-                <div
-                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
-                >
+
+                <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Philosophy</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Fundamental philosophical concepts
                   </p>
                 </div>
-                <div
-                  class="bg-gray-800/70 p-3 rounded-lg hover:scale-[1.02] transition-transform"
-                >
+
+                <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Astronomy</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Sun, moon, planets, stars, nebulae, galaxies
