--- a/writing.html
+++ b/writing.html
@@ -49,9 +49,8 @@
 
           <!-- Writing Samples grid -->
           <div
-            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mb-8"
+            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6 mb-8"
           >
-            <!-- Sample 1 -->
             <div
               class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
             >
@@ -61,17 +60,14 @@
                 rel="noopener noreferrer"
                 class="block"
               >
-                <h3 class="text-xl font-bold mb-2">
-                  Why I Love Cybersecurity<br /><br />
-                </h3>
-                <p class="text-gray-400 mb-3">A mosquitoe essay<br /><br /></p>
+                <h3 class="text-xl font-bold mb-2">Why I Love Cybersecurity</h3>
+                <p class="text-gray-400 mb-3">A mosquitoe essay</p>
                 <span class="text-xs bg-blue-400 px-2 py-1 rounded"
-                  >English</span
+                  >July 5, 2025</span
                 >
               </a>
             </div>
 
-            <!-- Sample 2 -->
             <div
               class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
             >
@@ -79,33 +75,71 @@
                 <h3 class="text-xl font-bold mb-2">
                   Machines Do Think... Kind Of
                 </h3>
-                <p class="text-gray-400 mb-3">
-                  Do machines actually think?<br /><br />
-                </p>
+                <p class="text-gray-400 mb-3">Do machines actually think?</p>
                 <span class="text-xs bg-blue-400 px-2 py-1 rounded"
-                  >English</span
+                  >Apr 25, 2025</span
                 >
               </a>
             </div>
 
-            <!-- Sample 3 -->
+            <div
+              class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+            >
+              <a href="platovsmlk.html" class="block">
+                <h3 class="text-xl font-bold mb-2">
+                  Plato vs. Martin Luther King Jr.
+                </h3>
+                <p class="text-gray-400 mb-3">
+                  An argument for civil disobedience
+                </p>
+                <span class="text-xs bg-blue-400 px-2 py-1 rounded"
+                  >Feb 28, 2025</span
+                >
+              </a>
+            </div>
+
+            <div
+              class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+            >
+              <a href="cherryhill.html" class="block">
+                <h3 class="text-xl font-bold mb-2">
+                  Cherry Hill Urban Community Garden
+                </h3>
+                <p class="text-gray-400 mb-3">A case study</p>
+                <span class="text-xs bg-blue-400 px-2 py-1 rounded"
+                  >Oct 20, 2024</span
+                >
+              </a>
+            </div>
+
             <div
               class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
             >
               <a href="gymculture.html" class="block">
                 <h3 class="text-xl font-bold mb-2">
-                  The Damaging Consequences of Toxic Gym Culture
+                  Damaging Consequences of Toxic Gym Culture
                 </h3>
                 <p class="text-gray-400 mb-3">
                   A close look at modern gym culture
                 </p>
                 <span class="text-xs bg-blue-400 px-2 py-1 rounded"
-                  >English</span
+                  >Nov 26, 2023</span
                 >
               </a>
             </div>
 
-            <!-- Sample 4 -->
+            <div
+              class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+            >
+              <a href="commonapp.html" class="block">
+                <h3 class="text-xl font-bold mb-2">Common App Essay</h3>
+                <p class="text-gray-400 mb-3">My style journey</p>
+                <span class="text-xs bg-blue-400 px-2 py-1 rounded"
+                  >Oct 1, 2022</span
+                >
+              </a>
+            </div>
+
             <div
               class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
             >
@@ -117,7 +151,7 @@
                   Understanding Japan's reconstruction post WWII
                 </p>
                 <span class="text-xs bg-blue-400 px-2 py-1 rounded"
-                  >English</span
+                  >June 3, 2022</span
                 >
               </a>
             </div>
