--- a/writing.html
+++ b/writing.html
@@ -11,6 +11,7 @@
     <header id="scroll-header" class="matrix-header">
       <div class="matrix-scanline"></div>
       <nav class="matrix-nav">
+        <a href="index.html" class="matrix-link">Home</a>
         <a href="aboutme.html" class="matrix-link">About Me</a>
         <a href="writing.html" class="matrix-link">Writing Samples</a>
       </nav>
